--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,18 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        ndk { abiFilters "armeabi", "x86" }
+        ndk{abiFilters "armeabi", "armeabi-v7a", "x86", "mips"}
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
@@ -30,10 +35,11 @@ dependencies {
     implementation 'com.qmuiteam:arch:0.6.1'
     annotationProcessor "com.qmuiteam:arch-compiler:0.6.1"
     // use annotationProcessor if java
-    implementation files('libs/tbs_sdk_thirdapp_v4.3.0.1072_43646_sharewithdownloadwithfile_withoutGame_obfs_20190429_175122.jar')
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //必须使用
     compile 'com.lzy.net:okgo:3.0.4'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation files('libs/tbs_sdk_thirdapp_v4.3.0.1148_43697_sharewithdownloadwithfile_withoutGame_obfs_20190805_175505.jar')
 }
+
