--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //必须使用
     compile 'com.lzy.net:okgo:3.0.4'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation files('libs/tbs_sdk_thirdapp_v4.3.0.1148_43697_sharewithdownloadwithfile_withoutGame_obfs_20190805_175505.jar')
 }
